more class stuff

--- a/BracketsFiles/html/Home.html
+++ b/BracketsFiles/html/Home.html
@@ -3,6 +3,9 @@
     <head>
         <title>Example</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../css/example.css">
+        <script></script>
+        <style></style>
     </head>
     <body>
         <header>
@@ -54,8 +57,8 @@
                     <dd><i><b>Pun Lord</b></i></dd>
                 <dt>Pineapple</dt>
                     <dd>Does not belong on pizza</dd>
-                <dt>Orangutan Juice &copy;</dt>
-                    <dd>The Nectar of the Gods</dd>
+                <dt style="color: orange">Orangutan Juice &copy;</dt>
+                    <dd>The <span style= "color: crimson">Nectar</span> <span style="color: royalblue">of the</span> <span style="color: goldenrod">Gods</span></dd>
 
             </dl>
         </main>
