--- a/BracketsFiles/html/Contact.html
+++ b/BracketsFiles/html/Contact.html
@@ -3,6 +3,7 @@
     <head>
         <title>Example</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../css/example.css">
     </head>
     <body>
         <header>
