--- a/BracketsFiles/html/Contact.html
+++ b/BracketsFiles/html/Contact.html
@@ -1,3 +1,8 @@
+<!--
+Auth: Drake Hetland
+Date: 1/28/2021
+Desc: This is the html contacts page example
+-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
