--- a/BracketsFiles/html/Home.html
+++ b/BracketsFiles/html/Home.html
@@ -1,3 +1,8 @@
+<!--
+Auth: Drake Hetland
+Date: 1/28/2021
+Desc: This is the html home page example
+-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -36,12 +41,12 @@
             </blockquote>
 
             Is there any difference?
-
+        <div id="lists">
             <!-- Unordered List -->
             <ul>
-                <li>Logan<sup>2</sup></li>
-                <li>Scapegoat<sub>(Nolyn)</sub></li>
-                <li><em>Nathan</em></li>
+                <li id="logan">Logan<sup>2</sup></li>
+                <li class="troublemaker">Scapegoat<sub>(Nolyn)</sub></li>
+                <li class="troublemaker"><em>Nathan</em></li>
             </ul>
 
             <!-- Ordered List -->
@@ -53,7 +58,7 @@
 
             <!-- Description List -->
             <dl>
-                <dt>Weston</dt>
+                <dt class="troublemaker">Weston</dt>
                     <dd><i><b>Pun Lord</b></i></dd>
                 <dt>Pineapple</dt>
                     <dd>Does not belong on pizza</dd>
@@ -61,6 +66,7 @@
                     <dd>The <span style= "color: crimson">Nectar</span> <span style="color: royalblue">of the</span> <span style="color: goldenrod">Gods</span></dd>
 
             </dl>
+        </div>
         </main>
         
         <footer>
