--- a/BracketsFiles/html/Home.html
+++ b/BracketsFiles/html/Home.html
@@ -34,16 +34,18 @@ Desc: This is the html home page example
             This is the body!
 
             <!-- Blockquote tag -->
-            <blockquote>
+            <blockquote style="border: 4px dotted #00FF00; padding: 6px 9px 8px 2px">
                 This is another set of words. <br>
                 Do you see any differences?<br>
                 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <b>- Weston</b>
             </blockquote>
 
+        <hr>
+            
             Is there any difference?
         <div id="lists">
             <!-- Unordered List -->
-            <ul>
+            <ul id="list">
                 <li id="logan">Logan<sup>2</sup></li>
                 <li class="troublemaker">Scapegoat<sub>(Nolyn)</sub></li>
                 <li class="troublemaker"><em>Nathan</em></li>
