--- a/BracketsFiles/Personal Website - Drake Hetland/HTML/personalWebsite.html
+++ b/BracketsFiles/Personal Website - Drake Hetland/HTML/personalWebsite.html
@@ -1,16 +1,24 @@
+<!-- 
+Auth: Drake Hetland
+Date: 2/1/2021
+Desc: Home page of my personal website
+-->
 <!DOCTYPE html>
 <html lang="en">
     <!-- Meta info. Sets what you see in the tab, and sets font -->
     <head>
         <title>Drake Hetland</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../css/personalWebsite.css">
+        <script></script>
+        <style></style>
     </head>
     
     <!-- Body tag -->
     <body>
         <!-- Header tag -->
         <header> 
-            <h1>Home</h1>
+            <h1 id="main">Home</h1>
         </header>
         
         <!-- Sets up nav portion of page -->
