--- a/BracketsFiles/Personal Website - Drake Hetland/HTML/personalWebsiteContact.html
+++ b/BracketsFiles/Personal Website - Drake Hetland/HTML/personalWebsiteContact.html
@@ -1,15 +1,23 @@
+<!-- 
+Auth: Drake Hetland
+Date: 2/1/2021
+Desc: Contact page of my personal website
+-->
 <!DOCTYPE html>
 <html lang="en">
     <!-- Meta info -->
     <head>
         <title>Drake Hetland</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../css/personalWebsite.css">
+        <script></script>
+        <style></style>
     </head>
     
     <body>
         <!-- Main header for page -->
         <header> 
-            <h1>Contact</h1>
+            <h1 id="main">Contact</h1>
         </header>
         
         <!-- Nav tag -->
