--- a/BracketsFiles/Personal Website - Drake Hetland/HTML/personalWebsite.html
+++ b/BracketsFiles/Personal Website - Drake Hetland/HTML/personalWebsite.html
@@ -2,14 +2,21 @@
 Auth: Drake Hetland
 Date: 2/1/2021
 Desc: Home page of my personal website
+Icon by freezinghot at https://www.teepublic.com/user/freezinghot
+Target audience: Young adults
+Being as my target audience is young adults, I would like to add more images/visuals to appeal to them more,
+but, as a rule, we are only supposed to implement meaningful visuals. As it stands now, being unable to align/format
+the page in a more interesting or visual condusive way, I think it would be counterproductive to haphazardly 
+put in more visuals at this time.
 -->
 <!DOCTYPE html>
 <html lang="en">
-    <!-- Meta info. Sets what you see in the tab, and sets font -->
+    <!-- Meta info. Sets what you see in the tab, and sets font. -->
     <head>
         <title>Drake Hetland</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="../css/personalWebsite.css">
+        <link rel="icon" href="../Images/MHWLogo.jfif" type="image/x-icon">
         <script></script>
         <style></style>
     </head>
@@ -21,12 +28,15 @@ Desc: Home page of my personal website
             <h1 id="main">Home</h1>
         </header>
         
-        <!-- Sets up nav portion of page -->
+        <!-- Sets up nav portion of page. 
+        In the future, would like to align off to the side of the page instead of middle to be less intrusive. -->
         <nav>
-            <ul>
+            <ul style="background-color: #0E939F; padding-left: 10px; padding-bottom: 5px; padding-top: 5px;
+                                    border-style: solid; border-color: #213931; width: 80px">
                 <li><a href="personalWebsite.html">Home</a></li>
                 <li><a href="personalWebsiteFavorites.html">Favorites</a></li>
                 <li><a href="personalWebsiteContact.html">Contact</a></li>
+                <li><a href="personalWebsiteArt.html">Art</a></li>
             </ul>
         </nav>
         
@@ -46,7 +56,7 @@ Desc: Home page of my personal website
         </main>
         <!-- Footer tag -->
         <footer>
-            <p><small>Drake Hetland personal website 2021</small></p>
+            <p><small>Drake Hetland Personal Website 2021</small></p>
         </footer>
     </body>
 </html>
