--- a/BracketsFiles/exampleBrackets/html/Home.html
+++ b/BracketsFiles/exampleBrackets/html/Home.html
@@ -9,8 +9,12 @@ Desc: This is the html home page example
         <title>Example</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="../css/example.css">
+        <link rel="icon" href="../Images/ilcc logo.jpg" type="image/x-icon">
         <script></script>
-        <style></style>
+        <style>
+            
+        
+        </style>
     </head>
     <body>
         <header>
